# adobo-engine

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES  TODO  adobo_editor.ini  assets.json  build.bat  casset.bat  imgui.ini  makefile  readme.md  sample.adoboproj  untitled.adoboproj
assets/: bin.glnsh  bin.h  bin.json
assets/atlas/: shoot_sprites.xml  shoot_stall.xml
assets/shader/: debug.frag  debug.vert  sprite.frag  sprite.vert  sprite_hitbox.frag  sprite_hitbox.vert  test_triangle.frag
assets/sprites/: shoot_hud.xml
example/: game.cpp
include/ggb/: cglm.h  data_struct.h  sparse.h  types.h
src/: main.cpp  types.h
src/components/: transform.h  transform2.h
src/core/: adoboproj.cpp  adoboproj.h  app.cpp  app.h  clock.cpp  clock.h  constants.h  editor.cpp  editor.h  game.h  gui.h  input.cpp  input.h  platform.cpp  platform.h
src/core/entity/: ecs.cpp  ecs.h  hitbox.h
src/core/math/: collisions.cpp  collisions.h
src/game/: editor.cpp  editor.h  game-clean.cpp  game.cpp  gui.cpp  metrix.cpp  metrix.h
src/renderer/: r_2D.h  r_sprite.cpp  r_sprite.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite2D.cpp  sprite2D.h  texture.cpp  texture.h  ui.cpp  ui.h
src/res/graphics/: shader.cpp  shader.h  texture.cpp  texture.h
src/resource/: atlas.cpp  atlas.h
src/resource/graphics/: shader.cpp  shader.h  texture.cpp  texture.h
src/util/: debug.h  debug_state.cpp  debug_state.h  logger.h  mem_arena.cpp  mem_arena.h  string.cpp  string.h
